# wire-cell-gen-kokkos-1

./: .gitignore  README.md  build-cmake  configure  configure.back  wcb  wscript
.cmake-cxx/: CMakeLists.txt
.cmake-kokkos/: CMakeLists.txt
.cmake-kokkos/test/: CMakeLists.txt
cfg/pgrapher/common/sim/: nodes.jsonnet
example/: sim.fcl  sim.jsonnet
inc/WireCellGenKokkos/: .BinnedDiffusion_transform.h.swp  BinnedDiffusion_transform.h  DepoTransform.h  GaussianDiffusion.h  ImpactData.h  ImpactTransform.h  KokkosEnv.h  KokkosTestFrameFilter.h
src/: .BinnedDiffusion_transform.cxx.swp  .GaussianDiffusion.cxx.swp  .GaussianDiffusion_CUDA.cu~.swp  BinnedDiffusion_transform.cxx  DepoTransform.cxx  GaussianDiffusion.cxx  GaussianDiffusion.kokkos  GaussianDiffusion_CUDA.cu  GaussianDiffusion_CUDA.cu~  ImpactData.cxx  ImpactTransform.cxx  KokkosEnv.cxx  KokkosEnv.kokkos  KokkosTestFrameFilter.cxx  KokkosTestFrameFilter.kokkos
test/: .test_kokkos.cxx.swp  test_atadd.cxx  test_atadd.kokkos  test_cuda.kokkos  test_kokkos.cxx  test_kokkos_cuda.kokkos  test_kokkos_random.kokkos  test_omp.kokkos  test_omp2.kokkos  test_random.kokkos
